tdf#125548 Qt5 no focus for the menu bar button

You can't tab into the menu bar, but if you add a corner widget,
it will be enlisted in the parent's focus chain! Interestingly
the menu bar even is considered to have the focus, if the widget
is focused, and will handle key events, but this can probably be
considered consistent.

So this just denies the button any focus, as this is a mouse-only
widget, and clicking it will close the document window.

Change-Id: I3c48d85ca56b6a54daf01f444dddc736e7ebb8e7
Reviewed-on: https://gerrit.libreoffice.org/73186
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit f6e7dbccf063767c2ac87c6460bd1004df742081)
Reviewed-on: https://gerrit.libreoffice.org/73191
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>